Fixed a bug where pressing 'reset' would leave backgrounds behind, by removing the .ul-list div, rather than the .ul-list li

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@
 }
 
 :root{
-    /* --bg-color: #2c6e49;
+/*  Previous colour styling
+    --bg-color: #2c6e49;
     --timer-color: #fdc228;
     --header-color: #eed28a;
     --input-bg-color: #4c956c;
